--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   },
   "scripts": {
     "dev": "vite --config vite.config.web.ts",
-    "build:web": "tsc -b && vite build --config vite.config.web.ts",
+    "build:web": "tsc && vite build --config vite.config.web.ts",
     "build:lib": "vite build --config vite.config.lib.ts",
     "format": "biome format --write ./src",
     "lint": "biome lint --write ./src",
     "check": "biome check --write ./src"
   },
   "simple-git-hooks": {
-    "pre-commit": "yarn lint && yarn format"
+    "pre-commit": "yarn lint",
+    "pre-push": "yarn format"
   },
   "dependencies": {
     "@tiptap/core": "^2.7.2",
@@ -46,8 +47,7 @@
     "lucide-react": "^0.441.0",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-qwerty": "^0.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
